处理绑定时查出两个用户会报错的bug